working on doc generation
